Update some layout

--- a/listing.html
+++ b/listing.html
@@ -3,7 +3,7 @@
     <head>
         <!--=============== basic  ===============-->
         <meta charset="UTF-8">
-        <title>Homeradar - Real Estate Listing Template</title>
+        <title>Property of Gujarat</title>
         <meta name="robots" content="index, follow"/>
         <meta name="keywords" content=""/>
         <meta name="description" content=""/>
@@ -257,29 +257,6 @@
             <div id="wrapper">
                 <!-- content -->	
                 <div class="content">
-                    <!-- categoties-column -->
-                    <div class="categoties-column">
-                        <div class="categoties-column_container cat-list">
-                            <ul>
-                                <li><a href="#" class="act-category"><i class="fal fa-city"></i><span>Apartments</span></a></li>
-                                <li><a href="#"><i class="fal fa-car-building"></i><span>Offices</span></a></li>
-                                <li><a href="#"><i class="fal fa-home"></i><span>House</span></a></li>
-                                <li><a href="#"><i class="fal fa-hotel"></i><span>Hotel</span></a></li>
-                                <li><a href="#"><i class="fal fa-warehouse-alt"></i><span>Villa</span></a></li>
-                            </ul>
-                        </div>
-                        <div class="progress-indicator">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                viewBox="-1 -1 34 34">
-                                <circle cx="16" cy="16" r="15.9155"
-                                    class="progress-bar__background" />
-                                <circle cx="16" cy="16" r="15.9155"
-                                    class="progress-bar__progress 
-                                    js-progress-bar" />
-                            </svg>
-                        </div>
-                    </div>
-                    <!-- categoties-column end -->
                     <!-- Map -->
                     <div class="map-container column-map   hid-mob-map">
                         <div id="map-main"></div>
@@ -341,7 +318,7 @@
                             <div class="listing-item">
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
-                                        <a href="https://youtu.be/LRDy0MUOTTQ" target="_blank" class="geodir-category-img_item">
+                                        <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
                                             <img src="images/all/1.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
@@ -351,7 +328,7 @@
                                         </ul>
                                     </div>
                                     <div class="geodir-category-content fl-wrap">
-                                        <h3><a href="https://youtu.be/LRDy0MUOTTQ" target="_blank">RESIDENTIAL PROPERTIES 4 RENT IN GANDHINAGAR</a></h3>
+                                        <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">RESIDENTIAL PROPERTIES 4 RENT IN GANDHINAGAR</a></h3>
                                         <div class="geodir-category-footer fl-wrap">
                                             <a href="agent-single.html" class="gcf-company"><img src="images/avatar/1.jpg" alt=""><span>By Liza Rose</span></a>
                                             <div class="listing-rating card-popup-rainingvis tolt" data-microtip-position="top" data-tooltip="Good" data-starrating2="4"></div>
@@ -364,7 +341,7 @@
                             <div class="listing-item">
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
-                                        <a href="https://youtu.be/FXw-kT0ljSg" target="_blank" class="geodir-category-img_item">
+                                        <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
                                             <img src="images/all/1.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
@@ -374,7 +351,7 @@
                                         </ul>
                                     </div>
                                     <div class="geodir-category-content fl-wrap">
-                                        <h3><a href="https://youtu.be/FXw-kT0ljSg" target="_blank">RESIDENTIAL PROPERTIES 4 SELL IN GANDHINAGAR</a></h3>
+                                        <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">RESIDENTIAL PROPERTIES 4 SELL IN GANDHINAGAR</a></h3>
                                         <div class="geodir-category-footer fl-wrap">
                                             <a href="agent-single.html" class="gcf-company"><img src="images/avatar/1.jpg" alt=""><span>By Anna Lips</span></a>
                                             <div class="listing-rating card-popup-rainingvis tolt" data-microtip-position="top" data-tooltip="Excellent" data-starrating2="5"></div>
@@ -387,7 +364,7 @@
                             <div class="listing-item">
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
-                                        <a href="https://youtu.be/6YxUzdLEdhU" target="_blank" class="geodir-category-img_item">
+                                        <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
                                             <img src="images/all/1.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
@@ -397,7 +374,7 @@
                                         </ul>
                                     </div>
                                     <div class="geodir-category-content fl-wrap">
-                                        <h3><a href="https://youtu.be/6YxUzdLEdhU" target="_blank">COMMERCIAL PROPERTIES 4 RENT IN GANDHINAGAR</a></h3>
+                                        <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">COMMERCIAL PROPERTIES 4 RENT IN GANDHINAGAR</a></h3>
                                         <div class="geodir-category-footer fl-wrap">
                                             <a href="agent-single.html" class="gcf-company"><img src="images/avatar/1.jpg" alt=""><span>By Mark Frosty</span></a>
                                             <div class="listing-rating card-popup-rainingvis tolt" data-microtip-position="top" data-tooltip="Good" data-starrating2="4"></div>
@@ -410,7 +387,7 @@
                             <div class="listing-item">
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
-                                        <a href="https://youtu.be/6YxUzdLEdhU" target="_blank" class="geodir-category-img_item">
+                                        <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
                                             <img src="images/all/1.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
@@ -420,7 +397,7 @@
                                         </ul>
                                     </div>
                                     <div class="geodir-category-content fl-wrap">
-                                        <h3><a href="https://youtu.be/6YxUzdLEdhU" target="_blank">COMMERCIAL PROPERTIES 4 SELL IN GANDHINAGAR</a></h3>
+                                        <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">COMMERCIAL PROPERTIES 4 SELL IN GANDHINAGAR</a></h3>
                                         <div class="geodir-category-footer fl-wrap">
                                             <a href="agent-single.html" class="gcf-company"><img src="images/avatar/1.jpg" alt=""><span>By Bill Trust</span></a>
                                             <div class="listing-rating card-popup-rainingvis tolt" data-microtip-position="top" data-tooltip="Excellent
@@ -434,7 +411,7 @@
                             <div class="listing-item">
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
-                                        <a href="https://youtu.be/6YxUzdLEdhU" target="_blank" class="geodir-category-img_item">
+                                        <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
                                             <img src="images/all/1.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
@@ -445,7 +422,7 @@
                                         
                                     </div>
                                     <div class="geodir-category-content fl-wrap">
-                                        <h3><a href="https://youtu.be/6YxUzdLEdhU" target="_blank">LAND (JAMIN) 4 SELL IN GANDHINAGAR</a></h3>
+                                        <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">LAND (JAMIN) 4 SELL IN GANDHINAGAR</a></h3>
                                         <div class="geodir-category-footer fl-wrap">
                                             <a href="agent-single.html" class="gcf-company"><img src="images/avatar/1.jpg" alt=""><span>By Andy Sposty</span></a>
                                             <div class="listing-rating card-popup-rainingvis tolt" data-microtip-position="top" data-tooltip="Average" data-starrating2="3"></div>
@@ -467,7 +444,7 @@
                         </div> -->
                         <!-- pagination end-->						
                         <div class="small-footer fl-wrap">
-                            <div class="copyright"> © Homeradar 2020 .  All rights reserved.</div>
+                            <div class="copyright"> © Property of Gujarat. All rights reserved.</div>
                             <a class="custom-to-top color-bg custom-scroll-link" href="#main"><i class="fas fa-caret-up"></i></a>
                         </div>
                     </div>
