--- a/listing.html
+++ b/listing.html
@@ -12,7 +12,7 @@
         <link type="text/css" rel="stylesheet" href="css/style.css">
         <link type="text/css" rel="stylesheet" href="css/color.css">
         <!--=============== favicons ===============-->
-        <link rel="shortcut icon" href="images/favicon.ico">
+        <link rel="shortcut icon" href="images/placeholder.svg">
     </head>
     <body>
         <!--loader-->
@@ -47,8 +47,8 @@
                 <!--  add new  btn end -->
                 <!--  header-opt_btn -->
                 <div class="show-reg-form">
-                    <a href="#">
-                        <i class="fab fa-whatsapp" style="font-size: 20px;"></i>
+                    <a href="https://wa.me/+919638031092" target="_blank">
+                        <i class="fab fa-whatsapp" style="font-size: 20px;color: #48C857;"></i>
                     </a>
                 </div>
                 <!--  header-opt_btn end -->
@@ -259,14 +259,16 @@
                 <div class="content">
                     <!-- Map -->
                     <div class="map-container column-map   hid-mob-map">
-                        <div id="map-main"></div>
+                        <img style="height: 100%; width:100%;border-radius: 10px;" src="./images/all/gujarat-map.png" alt="">
+                        <img class="map__marker" src="./images/placeholder.svg" alt="">
+                        <!-- <div id="map-main"></div>
                         <ul class="mapnavigation no-list-style">
                             <li><a href="#" class="prevmap-nav mapnavbtn"><span><i class="fas fa-caret-left"></i></span></a></li>
                             <li><a href="#" class="nextmap-nav mapnavbtn"><span><i class="fas fa-caret-right"></i></span></a></li>
                         </ul>
                         <div class="scrollContorl mapnavbtn tolt"   data-microtip-position="top-left" data-tooltip="Enable Scrolling"><span><i class="fal fa-unlock"></i></span></div>
                         <div class="location-btn geoLocation tolt" data-microtip-position="top-left" data-tooltip="Your location"><span><i class="fal fa-location"></i></span></div>
-                        <div class="map-close"><i class="fas fa-times"></i></div>
+                        <div class="map-close"><i class="fas fa-times"></i></div> -->
                     </div>
                     <!-- Map end -->					
                     <!-- top-search-content end -->					
@@ -342,7 +344,7 @@
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
                                         <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
-                                            <img src="images/all/1.jpg" alt="">
+                                            <img src="images/all/2.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
                                         <ul class="list-single-opt_header_cat">
@@ -365,7 +367,7 @@
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
                                         <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
-                                            <img src="images/all/1.jpg" alt="">
+                                            <img src="images/all/3.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
                                         <ul class="list-single-opt_header_cat">
@@ -388,7 +390,7 @@
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
                                         <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
-                                            <img src="images/all/1.jpg" alt="">
+                                            <img src="images/all/4.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
                                         <ul class="list-single-opt_header_cat">
@@ -412,7 +414,7 @@
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
                                         <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
-                                            <img src="images/all/1.jpg" alt="">
+                                            <img src="images/all/5.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
                                         <ul class="list-single-opt_header_cat">
@@ -453,93 +455,6 @@
                 <!-- content end -->	
             </div>
             <!-- wrapper end -->
-            <!--register form -->
-            <div class="main-register-wrap modal">
-                <div class="reg-overlay"></div>
-                <div class="main-register-holder tabs-act">
-                    <div class="main-register-wrapper modal_main fl-wrap">
-                        <div class="main-register-header color-bg">
-                            <div class="main-register-logo fl-wrap">
-                                <img src="images/white-logo.png" alt="">
-                            </div>
-                            <div class="main-register-bg">
-                                <div class="mrb_pin"></div>
-                                <div class="mrb_pin mrb_pin2"></div>
-                            </div>
-                            <div class="mrb_dec"></div>
-                            <div class="mrb_dec mrb_dec2"></div>
-                        </div>
-                        <div class="main-register">
-                            <div class="close-reg"><i class="fal fa-times"></i></div>
-                            <ul class="tabs-menu fl-wrap no-list-style">
-                                <li class="current"><a href="#tab-1"><i class="fal fa-sign-in-alt"></i> Login</a></li>
-                                <li><a href="#tab-2"><i class="fal fa-user-plus"></i> Register</a></li>
-                            </ul>
-                            <!--tabs -->                       
-                            <div class="tabs-container">
-                                <div class="tab">
-                                    <!--tab -->
-                                    <div id="tab-1" class="tab-content first-tab">
-                                        <div class="custom-form">
-                                            <form method="post"  name="registerform">
-                                                <label>Username or Email Address  * <span class="dec-icon"><i class="fal fa-user"></i></span></label>
-                                                <input name="email" type="text"    onClick="this.select()" value="">
-                                                <div class="pass-input-wrap fl-wrap">
-                                                    <label >Password  * <span class="dec-icon"><i class="fal fa-key"></i></span></label>
-                                                    <input name="password" type="password"  autocomplete="off" onClick="this.select()" value="" >
-                                                    <span class="eye"><i class="fal fa-eye"></i> </span>
-                                                </div>
-                                                <div class="lost_password">
-                                                    <a href="#">Lost Your Password?</a>
-                                                </div>
-                                                <div class="filter-tags">
-                                                    <input id="check-a3" type="checkbox" name="check">
-                                                    <label for="check-a3">Remember me</label>
-                                                </div>
-                                                <div class="clearfix"></div>
-                                                <button type="submit"  class="log_btn color-bg"> LogIn </button>
-                                            </form>
-                                        </div>
-                                    </div>
-                                    <!--tab end -->
-                                    <!--tab -->
-                                    <div class="tab">
-                                        <div id="tab-2" class="tab-content">
-                                            <div class="custom-form">
-                                                <form method="post"   name="registerform" class="main-register-form" id="main-register-form2">
-                                                    <label >Full Name  * <span class="dec-icon"><i class="fal fa-user"></i></span></label>
-                                                    <input name="name" type="text"    onClick="this.select()" value="">
-                                                    <label>Email Address  * <span class="dec-icon"><i class="fal fa-envelope"></i></span></label>
-                                                    <input name="email" type="text"    onClick="this.select()" value="">
-                                                    <div class="pass-input-wrap fl-wrap">
-                                                        <label >Password  * <span class="dec-icon"><i class="fal fa-key"></i></span></label>
-                                                        <input name="password" type="password"  autocomplete="off"  onClick="this.select()" value="" >
-                                                        <span class="eye"><i class="fal fa-eye"></i> </span>
-                                                    </div>
-                                                    <div class="filter-tags ft-list">
-                                                        <input id="check-a2" type="checkbox" name="check">
-                                                        <label for="check-a2">I agree to the <a href="#">Privacy Policy</a> and <a href="#">Terms and Conditions</a></label>
-                                                    </div>
-                                                    <div class="clearfix"></div>
-                                                    <button type="submit"     class="log_btn color-bg"> Register </button>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!--tab end -->
-                                </div>
-                                <!--tabs end -->
-                                <div class="log-separator fl-wrap"><span>or</span></div>
-                                <div class="soc-log fl-wrap">
-                                    <p>For faster login or register use your social account.</p>
-                                    <a href="#" class="facebook-log"> Facebook</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--register form end -->
         </div>
         <!-- Main end -->
         <!--=============== scripts  ===============-->
