--- a/listing.html
+++ b/listing.html
@@ -71,12 +71,12 @@
                     <nav>
                         <ul class="no-list-style">
                             <li>
-                                <a href="#">Home</a>
+                                <a href="#" class="act-link">Home</a>
                                 <!--second level end-->
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#" class="act-link">Listings</a>
-                            </li>
+                            </li> -->
                             
                             <li>
                                 <a href="#">About</a>
@@ -260,7 +260,9 @@
                     <!-- Map -->
                     <div class="map-container column-map   hid-mob-map">
                         <img style="height: 100%; width:100%;border-radius: 10px;" src="./images/all/gujarat-map.png" alt="">
-                        <img class="map__marker" src="./images/placeholder.svg" alt="">
+                        <a href="#" class="map__marker">
+                            <img src="./images/marker2.png" alt="">
+                        </a>
                         <!-- <div id="map-main"></div>
                         <ul class="mapnavigation no-list-style">
                             <li><a href="#" class="prevmap-nav mapnavbtn"><span><i class="fas fa-caret-left"></i></span></a></li>
@@ -321,42 +323,40 @@
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
                                         <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
+                                            <img src="images/all/2.jpg" alt="">
+                                            <div class="overlay"></div>
+                                        </a>
+                                        <ul class="list-single-opt_header_cat">
+                                            <li><a href="#" class="cat-opt color-bg">Residential</a></li>
+                                            <li><a href="#" class="cat-opt blue-bg">Rent</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="geodir-category-content fl-wrap">
+                                        <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">RESIDENTIAL PROPERTIES 4 RENT IN GANDHINAGAR</a></h3>
+                                        <div class="geodir-category-footer">
+                                            <a href="#" style="font-size: 15px; font-weight:600; color:#3270FC">View all properties</a>
+                                        </div>
+                                    </div>
+                                </article>
+                            </div>
+                            <!-- listing-item end-->	
+                            <!-- listing-item -->
+                            <div class="listing-item">
+                                <article class="geodir-category-listing fl-wrap">
+                                    <div class="geodir-category-img fl-wrap">
+                                        <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
                                             <img src="images/all/1.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
                                         <ul class="list-single-opt_header_cat">
                                             <li><a href="#" class="cat-opt color-bg">Residential</a></li>
-                                            <li><a href="#" class="cat-opt blue-bg">Sale</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="geodir-category-content fl-wrap">
-                                        <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">RESIDENTIAL PROPERTIES 4 RENT IN GANDHINAGAR</a></h3>
-                                        <div class="geodir-category-footer fl-wrap">
-                                            <a href="agent-single.html" class="gcf-company"><img src="images/avatar/1.jpg" alt=""><span>By Liza Rose</span></a>
-                                            <div class="listing-rating card-popup-rainingvis tolt" data-microtip-position="top" data-tooltip="Good" data-starrating2="4"></div>
-                                        </div>
-                                    </div>
-                                </article>
-                            </div>
-                            <!-- listing-item end-->	
-                            <!-- listing-item -->
-                            <div class="listing-item">
-                                <article class="geodir-category-listing fl-wrap">
-                                    <div class="geodir-category-img fl-wrap">
-                                        <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
-                                            <img src="images/all/2.jpg" alt="">
-                                            <div class="overlay"></div>
-                                        </a>
-                                        <ul class="list-single-opt_header_cat">
-                                            <li><a href="#" class="cat-opt blue-bg">Rent</a></li>
-                                            <li><a href="#" class="cat-opt color-bg">Residential</a></li>
+                                            <li><a href="#" class="cat-opt blue-bg">Sell</a></li>
                                         </ul>
                                     </div>
                                     <div class="geodir-category-content fl-wrap">
                                         <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">RESIDENTIAL PROPERTIES 4 SELL IN GANDHINAGAR</a></h3>
-                                        <div class="geodir-category-footer fl-wrap">
-                                            <a href="agent-single.html" class="gcf-company"><img src="images/avatar/1.jpg" alt=""><span>By Anna Lips</span></a>
-                                            <div class="listing-rating card-popup-rainingvis tolt" data-microtip-position="top" data-tooltip="Excellent" data-starrating2="5"></div>
+                                        <div class="geodir-category-footer">
+                                            <a href="#" style="font-size: 15px; font-weight:600; color:#3270FC">View all properties</a>
                                         </div>
                                     </div>
                                 </article>
@@ -367,19 +367,18 @@
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
                                         <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
-                                            <img src="images/all/3.jpg" alt="">
+                                            <img src="images/all/4.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
                                         <ul class="list-single-opt_header_cat">
-                                            <li><a href="#" class="cat-opt blue-bg">Rent</a></li>
                                             <li><a href="#" class="cat-opt color-bg">Commercial</a></li>
+                                            <li><a href="#" class="cat-opt blue-bg">Rent</a></li>
                                         </ul>
                                     </div>
                                     <div class="geodir-category-content fl-wrap">
                                         <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">COMMERCIAL PROPERTIES 4 RENT IN GANDHINAGAR</a></h3>
-                                        <div class="geodir-category-footer fl-wrap">
-                                            <a href="agent-single.html" class="gcf-company"><img src="images/avatar/1.jpg" alt=""><span>By Mark Frosty</span></a>
-                                            <div class="listing-rating card-popup-rainingvis tolt" data-microtip-position="top" data-tooltip="Good" data-starrating2="4"></div>
+                                        <div class="geodir-category-footer">
+                                            <a href="#" style="font-size: 15px; font-weight:600; color:#3270FC">View all properties</a>
                                         </div>
                                     </div>
                                 </article>
@@ -390,20 +389,18 @@
                                 <article class="geodir-category-listing fl-wrap">
                                     <div class="geodir-category-img fl-wrap">
                                         <a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank" class="geodir-category-img_item">
-                                            <img src="images/all/4.jpg" alt="">
+                                            <img src="images/all/3.jpg" alt="">
                                             <div class="overlay"></div>
                                         </a>
                                         <ul class="list-single-opt_header_cat">
-                                            <li><a href="#" class="cat-opt blue-bg">Sale</a></li>
                                             <li><a href="#" class="cat-opt color-bg">Commercial</a></li>
+                                            <li><a href="#" class="cat-opt blue-bg">Sale</a></li>
                                         </ul>
                                     </div>
                                     <div class="geodir-category-content fl-wrap">
                                         <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">COMMERCIAL PROPERTIES 4 SELL IN GANDHINAGAR</a></h3>
-                                        <div class="geodir-category-footer fl-wrap">
-                                            <a href="agent-single.html" class="gcf-company"><img src="images/avatar/1.jpg" alt=""><span>By Bill Trust</span></a>
-                                            <div class="listing-rating card-popup-rainingvis tolt" data-microtip-position="top" data-tooltip="Excellent
-                                                " data-starrating2="5"></div>
+                                        <div class="geodir-category-footer">
+                                            <a href="#" style="font-size: 15px; font-weight:600; color:#3270FC">View all properties</a>
                                         </div>
                                     </div>
                                 </article>
@@ -425,26 +422,15 @@
                                     </div>
                                     <div class="geodir-category-content fl-wrap">
                                         <h3><a href="https://youtube.com/playlist?list=PLM6CVFBq997yZYE6vF0Hq5QYnhpGNFE-v" target="_blank">LAND (JAMIN) 4 SELL IN GANDHINAGAR</a></h3>
-                                        <div class="geodir-category-footer fl-wrap">
-                                            <a href="agent-single.html" class="gcf-company"><img src="images/avatar/1.jpg" alt=""><span>By Andy Sposty</span></a>
-                                            <div class="listing-rating card-popup-rainingvis tolt" data-microtip-position="top" data-tooltip="Average" data-starrating2="3"></div>
+                                        <div class="geodir-category-footer">
+                                            <a href="#" style="font-size: 15px; font-weight:600; color:#3270FC">View all properties</a>
                                         </div>
                                     </div>
                                 </article>
                             </div>
                             <!-- listing-item end-->														
                         </div>
-                        <!-- listing-item-wrap end-->
-                        <!-- pagination-->
-                        <!-- <div class="pagination">
-                            <a href="#" class="prevposts-link"><i class="fa fa-caret-left"></i></a>
-                            <a href="#" >1</a>
-                            <a href="#" class="current-page">2</a>
-                            <a href="#">3</a>
-                            <a href="#">4</a>
-                            <a href="#" class="nextposts-link"><i class="fa fa-caret-right"></i></a>
-                        </div> -->
-                        <!-- pagination end-->						
+                        <!-- listing-item-wrap end-->						
                         <div class="small-footer fl-wrap">
                             <div class="copyright"> © Property of Gujarat. All rights reserved.</div>
                             <a class="custom-to-top color-bg custom-scroll-link" href="#main"><i class="fas fa-caret-up"></i></a>
