--- a/listing.html
+++ b/listing.html
@@ -61,8 +61,8 @@
                 <!--  login btn -->
                 <div class="show-reg-form">
                     <i class="fas fa-phone-alt"></i>
-                    <span>963-803-1092</span> &nbsp; - &nbsp;
-                    <span>966-252-1092</span> &nbsp; - &nbsp;
+                    <span>963-803-1092</span> &nbsp;
+                    <span>966-252-1092</span> &nbsp;
                     <span>982-587-5439</span>
                 </div>
                 <!--  login btn  end -->
@@ -263,21 +263,13 @@
                         <a href="#" class="map__marker">
                             <img src="./images/marker2.png" alt="">
                         </a>
-                        <!-- <div id="map-main"></div>
-                        <ul class="mapnavigation no-list-style">
-                            <li><a href="#" class="prevmap-nav mapnavbtn"><span><i class="fas fa-caret-left"></i></span></a></li>
-                            <li><a href="#" class="nextmap-nav mapnavbtn"><span><i class="fas fa-caret-right"></i></span></a></li>
-                        </ul>
-                        <div class="scrollContorl mapnavbtn tolt"   data-microtip-position="top-left" data-tooltip="Enable Scrolling"><span><i class="fal fa-unlock"></i></span></div>
-                        <div class="location-btn geoLocation tolt" data-microtip-position="top-left" data-tooltip="Your location"><span><i class="fal fa-location"></i></span></div>
-                        <div class="map-close"><i class="fas fa-times"></i></div> -->
+                        <div class="map-close"><i class="fas fa-times"></i></div>
                     </div>
                     <!-- Map end -->					
                     <!-- top-search-content end -->					
                     <!-- col-list-wrap -->
                     <div class="col-list-wrap gray-bg ">
                         <div class="col-list-wrap_opt fl-wrap">
-                            <div class="show-hidden-filter col-list-wrap_opt_btn color-bg">Show Filters</div>
                             <div class="show-hidden-map not-vis_lap col-list-wrap_opt_btn color-bg">Show Map</div>
                         </div>
                         <!-- list-main-wrap-header-->
