--- a/listing.html
+++ b/listing.html
@@ -61,9 +61,9 @@
                 <!--  login btn -->
                 <div class="show-reg-form">
                     <i class="fas fa-phone-alt"></i>
-                    <span>963-803-1092</span> &nbsp;
-                    <span>966-252-1092</span> &nbsp;
-                    <span>982-587-5439</span>
+                    <span style="color: #fff !important;">963-803-1092</span> &nbsp;
+                    <span style="color: #fff !important;">966-252-1092</span> &nbsp;
+                    <span style="color: #fff !important;">982-587-5439</span>
                 </div>
                 <!--  login btn  end -->
                 <!--  navigation --> 
@@ -226,28 +226,12 @@
                 <!--header-opt-modal-->  
                 <div class="header-opt-modal novis_header-mod">
                     <div class="header-opt-modal-container hopmc_init">
-                        <div class="header-opt-modal-item lang-item fl-wrap">
-                            <h4>Language: <span>EN</span></h4>
-                            <div class="header-opt-modal-list fl-wrap">
-                                <ul>
-                                    <li><a href="#" class="current-lan" data-lantext="EN">English</a></li>
-                                    <li><a href="#" data-lantext="FR">Franais</a></li>
-                                    <li><a href="#" data-lantext="ES">Espaol</a></li>
-                                    <li><a href="#" data-lantext="DE">Deutsch</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="header-opt-modal-item currency-item fl-wrap">
-                            <h4>Currency: <span>USD</span></h4>
-                            <div class="header-opt-modal-list fl-wrap">
-                                <ul>
-                                    <li><a href="#" class="current-lan" data-lantext="USD">USD</a></li>
-                                    <li><a href="#" data-lantext="EUR">EUR</a></li>
-                                    <li><a href="#" data-lantext="GBP">GBP</a></li>
-                                    <li><a href="#" data-lantext="RUR">RUR</a></li>
-                                </ul>
-                            </div>
-                        </div>
+                        <ul class="custom__social__icon">
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        </ul>
                     </div>
                 </div>
                 <!--header-opt-modal end -->  
