--- a/listing.html
+++ b/listing.html
@@ -61,9 +61,9 @@
                 <!--  login btn -->
                 <div class="show-reg-form">
                     <i class="fas fa-phone-alt"></i>
-                    <span style="color: #fff !important;">963-803-1092</span> &nbsp;
-                    <span style="color: #fff !important;">966-252-1092</span> &nbsp;
-                    <span style="color: #fff !important;">982-587-5439</span>
+                    <span>963-803-1092</span> &nbsp;
+                    <span>966-252-1092</span> &nbsp;
+                    <span>982-587-5439</span>
                 </div>
                 <!--  login btn  end -->
                 <!--  navigation --> 
