--- a/listing.html
+++ b/listing.html
@@ -245,9 +245,9 @@
                 <div class="content">
                     <!-- Map -->
                     <div class="map-container column-map   hid-mob-map">
-                        <img style="height: 100%; width:100%;border-radius: 10px;" src="./images/all/gujarat-map.png" alt="">
+                        <img style="height: 100%; width:100%;border-radius: 10px;" src="./images/all/gujarat-map2.png" alt="">
                         <a href="#" class="map__marker">
-                            <img src="./images/marker2.png" alt="">
+                            <img src="./images/placeholder.svg" alt="" style="height: 42px;">
                         </a>
                         <div class="map-close"><i class="fas fa-times"></i></div>
                     </div>
@@ -411,14 +411,12 @@
                         <!-- listing-item-wrap end-->						
                         <div class="small-footer fl-wrap">
                             <div class="copyright"> © Property of Gujarat. All rights reserved.</div>
-                            <div>
-                                <ul class="custom__social__icon">
+                            <ul class="custom__social__icon">
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                     <li><a href="#"><i class="fab fa-youtube"></i></a></li>
                                 </ul>
-                            </div>
                             <a class="custom-to-top color-bg custom-scroll-link" href="#main"><i class="fas fa-caret-up"></i></a>
                         </div>
                     </div>
