--- a/about.html
+++ b/about.html
@@ -578,7 +578,7 @@
                 <!-- footer -->	
                 <footer class="main-footer fl-wrap" style="padding-top: 0px;">
                     <!--sub-footer-->
-                    <div class="sub-footer gray-bg fl-wrap">
+                    <div class="sub-footer fl-wrap">
                         <div class="container">
                             <div class="copyright"> © Property of Gujarat. All rights reserved.</div>
                             <div class="subfooter-nav">
