--- a/contacts.html
+++ b/contacts.html
@@ -405,7 +405,7 @@
                                 <input type="text"  name="email" id="email" placeholder="Email Address*" value=""/>
                                 <textarea name="comments"  id="comments" cols="40" rows="3" placeholder="Your Message:"></textarea>
                             </fieldset>
-                            <button class="btn float-btn color-bg" type="submit" style="margin-top:15px;" id="submit">Send Message</button>
+                            <button class="btn float-btn color-bg" style="margin-top:15px;" id="submit">Send Message</button>
                         </form>
                     </div>
                     <!-- contact form  end--> 					
