--- a/contacts.html
+++ b/contacts.html
@@ -397,8 +397,8 @@
                     </div>
                     <div id="contact-form" class="contact-form fl-wrap">
                         <div id="message"></div>
-                        <form  class="custom-form" action="./php/contact.php" name="contactform" id="contactform">
-                            1
+                        <form  class="custom-form" method="post" action="./php/contact.php" name="contactform" id="contactform">
+                            2
                             <fieldset>
                                 <label>Your name* <span class="dec-icon"><i class="fas fa-user"></i></span></label>
                                 <input type="text" name="name" id="name" placeholder="Your Name *" value=""/>
