Update footer and contact form

--- a/about.html
+++ b/about.html
@@ -576,7 +576,7 @@
                 </div>
                 <!-- content end -->	
                 <!-- footer -->	
-                <footer class="main-footer fl-wrap" style="padding-top: 0px;">
+                <footer class="main-footer fl-wrap gray-bg" style="padding-top: 0px;">
                     <!--sub-footer-->
                     <div class="sub-footer fl-wrap">
                         <div class="container">
