--- a/contacts.html
+++ b/contacts.html
@@ -348,7 +348,7 @@
                 <!-- content end -->	
                 <!-- subscribe-wrap end -->	
                 <!-- footer -->	
-                <footer class="main-footer fl-wrap" style="padding-top: 0px;">
+                <footer class="main-footer fl-wrap gray-bg" style="padding-top: 0px;">
                     <!--sub-footer-->
                     <div class="sub-footer gray-bg fl-wrap">
                         <div class="container">
@@ -398,7 +398,6 @@
                     <div id="contact-form" class="contact-form fl-wrap">
                         <div id="message"></div>
                         <form  class="custom-form" method="post" action="./php/contact.php" name="contactform" id="contactform">
-                            2
                             <fieldset>
                                 <label>Your name* <span class="dec-icon"><i class="fas fa-user"></i></span></label>
                                 <input type="text" name="name" id="name" placeholder="Your Name *" value=""/>
